# l2rust

./: Cargo.toml  README.md
config/: network.toml
src/: main.rs
src/blowfish/: blowfish.rs  fixed.rs  mod.rs
src/config/: config.rs
src/gameserver/: gameserver.rs  mod.rs
src/loginserver/: crypt.rs  loginserver.rs  mod.rs  models.rs
src/loginserver/client/: client.rs
src/packet/: packet.rs
