[package]
name = "l2rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"]}
rand = "0.8.5"
log4rs = "1.2.0"
log = "0.4"
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.8.2"
byteorder = "1.5.0"